--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -2,7 +2,7 @@
   <!-- Title Section -->
   <div class="nine">
     <h1>
-      {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ CurrentHospitalizations }}   מאושפזי עבר   {{ TotalHospitalizations }}</span>
+      {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ NullReleaseDateCount }}   מאושפזי עבר   {{ NonNullReleaseDateCount }}</span>
 
     </h1>
     
@@ -129,26 +129,44 @@ class="custom-toggle-group"
         </div>
       </mat-card>
       <!-- Lab Results Over 180 Percentage Card -->
-      <mat-card class="gauge-card">
-        <div class="gauge-title">בדיקות מעבדה</div>
-        <div class="gauge-content">
-          <ngx-gauge
-            [value]="labResultOver180Percentage"
-            [min]="0"
-            [max]="100"
-            [label]="''"
-            [append]="'%'"
-            [foregroundColor]="'#dd4b39'"
-          ></ngx-gauge>
-          <div class="gauge-info">
-            סה"כ מטופלים: <strong>{{ filteredCount }}</strong>
-            מתוך <strong>{{ denominator }}</strong>
-          </div>
-          
-        </div>
-      </mat-card>
-      
-      
+  
+<mat-card class="gauge-card">
+  <div class="gauge-title">בדיקות מעבדה</div>
+  <div class="gauge-content">
+    <ngx-gauge
+      [value]="labResultsPercentage"
+      [min]="0"
+      [max]="100"
+      [label]="''"
+      [append]="'%'"
+      [foregroundColor]="'#dd4b39'"
+    ></ngx-gauge>
+    <div class="gauge-info">
+      סה"כ מטופלים: <strong>{{ dataSource1.data.length }}</strong>
+      מתוך <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
+    </div>
+  </div>
+</mat-card>
+
+<!-- Below 70 Gauge -->
+<mat-card class="gauge-card">
+  <div class="gauge-title">סוכר מתחת ל-70</div>
+  <div class="gauge-content">
+    <ngx-gauge
+      [value]="below70Percentage"
+      [min]="0"
+      [max]="100"
+      [label]="''"
+      [append]="'%'"
+      [foregroundColor]="'#00a65a'"
+    ></ngx-gauge>
+    <div class="gauge-info">
+      סה"כ מטופלים: <strong>{{ dataSourceBelow70.data.length }}</strong>
+      מתוך <strong>{{ globalSourceTableFilter === 'מאושפזים' ? NullReleaseDateCount : NonNullReleaseDateCount }}</strong>
+    </div>
+  </div>
+</mat-card>
+
       
       
       <!-- ייעוצים -->
